Revert "fix(button): prevent icon and tooltip jumping for tertiary button (#5618)"
This reverts commit 734a39393e08b82d523c9f09389c2513b17cb113.

--- a/packages/components/src/components/button/_button.scss
+++ b/packages/components/src/components/button/_button.scss
@@ -84,6 +84,7 @@
       $hover-tertiary,
       currentColor,
       $active-tertiary,
+      1px
     );
 
     &:hover {
@@ -108,6 +109,19 @@
       background: transparent;
       color: $disabled;
       outline: none;
+    }
+  }
+
+  .#{$prefix}--btn--tertiary,
+  .#{$prefix}--btn--tertiary.#{$prefix}--btn--field,
+  .#{$prefix}--btn--tertiary.#{$prefix}--btn--sm {
+    padding-right: rem(62px);
+    padding-left: rem(14px);
+
+    &:focus {
+      border-width: rem(3px);
+      padding-right: rem(60px);
+      padding-left: rem(12px);
     }
   }
 
@@ -159,16 +173,11 @@
 
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--tooltip__trigger {
     @include tooltip--trigger('icon', 'bottom');
-
-    svg,
-    &:hover svg,
-    &:focus svg {
-      fill: currentColor;
-    }
   }
 
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--tooltip__trigger:focus {
     border-color: $focus;
+    box-shadow: inset 0 0 0 $button-outline-width $ui-02;
   }
 
   .#{$prefix}--btn.#{$prefix}--btn--icon-only.#{$prefix}--tooltip__trigger:focus
@@ -186,8 +195,8 @@
   }
 
   .#{$prefix}--btn--icon-only {
-    padding-left: rem(15px);
-    padding-right: rem(15px);
+    padding-left: rem(13px);
+    padding-right: rem(13px);
 
     .#{$prefix}--btn__icon {
       position: static;
@@ -223,20 +232,50 @@
     display: none;
   }
 
+  .#{$prefix}--btn--icon-only.#{$prefix}--btn--tertiary {
+    padding-left: rem(15px);
+    padding-right: rem(15px);
+
+    &:focus {
+      padding-left: rem(13px);
+      padding-right: rem(13px);
+    }
+  }
+
   .#{$prefix}--btn--field.#{$prefix}--btn--icon-only {
+    padding-left: rem(9px);
+    padding-right: rem(9px);
+  }
+
+  .#{$prefix}--btn--field.#{$prefix}--btn--icon-only.#{$prefix}--btn--tertiary {
     padding-left: rem(11px);
     padding-right: rem(11px);
+
+    &:focus {
+      padding-left: rem(9px);
+      padding-right: rem(9px);
+    }
   }
 
   .#{$prefix}--btn--sm.#{$prefix}--btn--icon-only {
+    padding-left: rem(5px);
+    padding-right: rem(5px);
+  }
+
+  .#{$prefix}--btn--sm.#{$prefix}--btn--icon-only.#{$prefix}--btn--tertiary {
     padding-left: rem(7px);
     padding-right: rem(7px);
+
+    &:focus {
+      padding-left: rem(5px);
+      padding-right: rem(5px);
+    }
   }
 
   .#{$prefix}--btn--danger {
     @include button-theme(
       $danger,
-      transparent,
+      $danger,
       $text-04,
       $hover-danger,
       currentColor,
@@ -245,6 +284,7 @@
 
     &:hover {
       color: $text-04;
+      border: $button-border-width solid transparent;
     }
   }
 
