--- a/packages/components/src/globals/scss/_theme-tokens.scss
+++ b/packages/components/src/globals/scss/_theme-tokens.scss
@@ -131,7 +131,7 @@ $button-padding-ghost-sm: calc(0.375rem - 3px) 12px !default;
 /// @type Number
 /// @access public
 /// @group button
-$button-border-width: 2px !default;
+$button-border-width: 3px !default;
 
 /// @type Number
 /// @access public
@@ -141,13 +141,11 @@ $button-outline-width: 1px !default;
 /// @type Number
 /// @access public
 /// @group button
-/// @deprecated
 $button-outline-offset: -5px !default;
 
 /// @type Value
 /// @access public
 /// @group button
-/// @deprecated
 $button-outline: 1px solid $ibm-color__white-0 !default;
 
 // Accordion
